# cargo-try

./: Cargo.toml
src/: main.rs
