[package]
name = "cargo-try"
version = "0.1.0"
edition = "2021"
description = "Cargo command to temporarily install and run an application"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
anyhow = "1.0"
tempfile = "3.3.0"
log = "0"
env_logger = "0.9"